@@ -35,6 +35,11 @@ static constexpr char ScriptReserved_SetPoison[]			= "SetPoison";
 static constexpr char ScriptReserved_GetPoison[]			= "GetPoison";
 static constexpr char ScriptReserved_SetAir[]				= "SetAir";
 static constexpr char ScriptReserved_GetAir[]				= "GetAir";
+static constexpr char ScriptReserved_GetWet[]				= "GetWet";
+static constexpr char ScriptReserved_SetWet[]				= "SetWet";
+static constexpr char ScriptReserved_GetSprintEnergy[]		= "GetSprintEnergy";
+static constexpr char ScriptReserved_SetSprintEnergy[]		= "SetSprintEnergy";
+static constexpr char ScriptReserved_GetAmmoCount[]			= "GetAmmoCount";
 static constexpr char ScriptReserved_GetColor[]				= "GetColor";
 static constexpr char ScriptReserved_SetColor[]				= "SetColor";
 static constexpr char ScriptReserved_GetPosition[]			= "GetPosition";
